media: AVDA always reports SUPPORTS_DEFERRED_INITIALIZATION

Previously AVDA was only reporting this capability when deferred
rendering was enabled, but they are orthogonal.

BUG=608581

Review-Url: https://codereview.chromium.org/1944963002
Cr-Commit-Position: refs/heads/master@{#391576}

Former-commit-id: 37452ef6ad139284e11392a6bd7062ab1f18f43f